Enabled lang configuration

--- a/_includes/masthead.html
+++ b/_includes/masthead.html
@@ -5,9 +5,17 @@
     <div class="masthead__menu">
       <nav id="site-nav" class="greedy-nav">
         {% unless logo_path == empty %}
-          <a class="site-logo" href="{{ '/' | relative_url }}"><img src="{{ logo_path | relative_url }}" alt=""></a>
+          {% if page.lang == 'en' %}
+            <a class="site-logo" href="{{ '/' | relative_url }}"><img src="{{ logo_path | relative_url }}" alt=""></a>
+          {% else %}         
+            <a class="site-logo" href="{{ '/' | append: page.lang | relative_url }}"><img src="{{ logo_path | relative_url }}" alt=""></a>
+          {% endif %}
         {% endunless %}
-        <a class="site-title" href="{{ '/' | relative_url }}">
+        {% if page.lang == 'en' %}
+          <a class="site-title" href="{{ '/' | relative_url }}">
+        {% else %}  
+          <a class="site-title" href="{{ '/' | append: page.lang | relative_url }}">
+        {% endif %}
           {{ site.masthead_title | default: site.title }}
           {% if site.subtitle %}<span class="site-subtitle">{{ site.subtitle }}</span>{% endif %}
         </a>
