--- a/_includes/head/custom.html
+++ b/_includes/head/custom.html
@@ -1,4 +1,7 @@
 <!-- start custom head snippets -->
+<link rel="stylesheet" href="{{ '/assets/css/custom.css' | relative_url }}">
+<link href="https://fonts.googleapis.com/css?family=Noto+Sans+JP&subset=japanese" rel="stylesheet">
+<script src="https://twemoji.maxcdn.com/v/latest/twemoji.min.js" crossorigin="anonymous"></script>
 {% for block in site.data.map %}
 {% for item in block[page.lang] %}
 {% if item == page.path %}
