Edited metadata fields

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -19,3 +19,17 @@ pre.highlight {
   margin: 0;
   padding: 1em;
 }
+
+.page__taxonomy-item{
+  padding: 0px 10px;
+  margin-bottom: 5px;
+}
+
+p.page__date{
+  margin-bottom: 5px;
+}
+
+header div.page__meta{
+  margin-top: 10px;
+  padding-left: 20px;
+}
