Modified the style of note section

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -37,3 +37,12 @@ header div.page__meta{
 .page__date > time{
   margin-right: 1em;
 }
+
+.notice{
+  margin: 0;
+  padding: 0.5em;
+}
+
+.notice > h6{
+  margin: 0.5em 0 0.5em;
+}
